old_tests/fail/recursive_class_dep.sk_
module Main where

class Boo a 

instance (Boo a) => Boo a

foo a :: (Boo a) => a -> Bool
foo a = True

main = ()
